--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
-<html>
-    
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-compatible", content="i.e=edge">
+        <title>Excursion</title>
+        <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    </head>
+    <body>
+        
+    </body>
 </html>
