--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     </head>
     <body>
-        
+      <h1>Discover hidden places in the world around you</h1>
+      <p><a hrep="#">Download Excursion (Coming Soon!)</p>  
     </body>
 </html>
